improve report